# PostPuppy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
postpuppy/: __main__.py
postpuppy/utils/: checker.py  emails.py  env.py  langs.py  logging.py  shipments.py  signing.py  slack.py  starlette.py
postpuppy/views/: error.py  home.py  settings.py
prisma/: schema.prisma
utils/: checker.py  env.py  shipments.py  slack.py  starlette.py
views/: error.py  home.py  settings.py
